# nlive

./: .gitmodules  .travis.yml  CMakeLists.txt  azure-pipelines.yml  readme.md
app/: CMakeLists.txt  main.cpp
app/base/: CMakeLists.txt
app/base/common/: CMakeLists.txt  actions.cpp  actions.h  datetime.h  disposable.cpp  disposable.h  include.h  memory.h  perf.h  qserialize.h  serialize.h  sig.h  uuid.cpp  uuid.h
app/base/layout/: CMakeLists.txt  action_bar.cpp  action_bar.h  div.cpp  div.h  fillparentbox.cpp  fillparentbox.h  fillparentview.cpp  fillparentview.h  flex_layout.h  grid_layout.cpp  grid_layout.h  include.h
app/base/ui/: CMakeLists.txt  solid_box.h  sprite_button.cpp  sprite_button.h  svg_button.h  svg_sprite.cpp  svg_sprite.h  text_box.h
app/browser/: CMakeLists.txt  commands.cpp  commands.h  main_window.cpp  main_window.h  widgets_service.cpp  widgets_service.h
app/browser/actions/: playable_actions.h  sequence_actions.h
app/browser/drag/: CMakeLists.txt  static_drag_and_drop.cpp  static_drag_and_drop.h
app/browser/images/: images.qrc
app/browser/menu_bar/: CMakeLists.txt  menu_bar.cpp  menu_bar.h  menu_bar_control.cpp  menu_bar_control.h
app/browser/menu_bar/qt/: CMakeLists.txt  menu_bar_control.cpp  menu_bar_control.h
app/browser/services/: CMakeLists.txt  include.h
app/browser/services/audio_flaty/: CMakeLists.txt  audio_flaty_service.cpp  audio_flaty_service.h
app/browser/services/commands/: CMakeLists.txt  command_service.cpp  command_service.h
app/browser/services/context_key/: CMakeLists.txt  context_key.cpp  context_key.h
app/browser/services/import/: CMakeLists.txt  import_progress_dialog.cpp  import_progress_dialog.h  import_service.h  import_service_impl.cpp  import_service_impl.h
app/browser/services/memento/: CMakeLists.txt  in_memory_memento_service.h  memento_scope.h  memento_service.h
app/browser/services/menu_bar/: CMakeLists.txt  menu_bar_service.cpp  menu_bar_service.h  menu_bar_sevice.h
app/browser/services/play/: CMakeLists.txt  play_service.cpp  play_service.h  playable.h
app/browser/services/project/: CMakeLists.txt  projects_service.h
app/browser/services/projects/: CMakeLists.txt  projects_service.cpp  projects_service.h  projects_service_impl.cpp  projects_service_impl.h
app/browser/services/resource/: resource_service.h  (+2 more)
app/browser/widgets/: CMakeLists.txt  widget.cpp  widget.h
app/decoder/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  audio_frame.h  video_decoder.cpp  video_decoder.h  video_decoder_host.h  video_frame.cpp  video_frame.h
app/ext/: CMakeLists.txt
app/ext/tinyxml2/: CMakeLists.txt
app/model/: CMakeLists.txt  include.h  serialization.h
app/model/common/: CMakeLists.txt  rational.cpp  rational.h  serialization.h  timebase.cpp  timebase.h
app/model/effect/: CMakeLists.txt  effect.cpp  effect.h  gray_scale_effect.cpp  gray_scale_effect.h  keyframe.h  property.h  property_base.h  serialization.h  transform_effect.cpp  transform_effect.h
app/model/project/: CMakeLists.txt  project.cpp  project.h  sequence_manager.cpp  sequence_manager.h  serialization.h
app/model/resource/: CMakeLists.txt  audio_resource.cpp  audio_resource.h  raw_audio_resource.cpp  raw_audio_resource.h  resource.cpp  resource.h  serialization.h  video_resource.cpp  video_resource.h
app/model/sequence/: CMakeLists.txt  audio_clip.cpp  audio_clip.h  clip.cpp  clip.h  sequence.cpp  sequence.h  serialization.h  track.cpp  track.h  video_clip.cpp  video_clip.h
app/model/storage/: CMakeLists.txt  audio_storage_item.cpp  audio_storage_item.h  resource_storage_item.cpp  resource_storage_item.h  sequence_storage_item.cpp  sequence_storage_item.h  serialization.h  storage_directory.cpp  storage_directory.h  storage_item.cpp  storage_item.h  storage_item_factory.h  video_resource_storage_item.cpp  video_resource_storage_item.h  video_storage_item.cpp  video_storage_item.h
app/platform/: CMakeLists.txt  include.h
app/platform/action/: CMakeLists.txt  actions.cpp  actions.h  menu_service.cpp  menu_service.h
app/platform/commands/: CMakeLists.txt  commands.cpp  commands.h
app/platform/context_key/: CMakeLists.txt  context_key.cpp  context_key.h
app/platform/encoder/: CMakeLists.txt  encoding_service.h  encoding_service_impl.cpp  encoding_service_impl.h
app/platform/logger/: CMakeLists.txt  logger.cpp  logger.h
app/platform/menu_bar/: CMakeLists.txt  menu_bar.h  menu_bar_service.h
app/platform/resource/: CMakeLists.txt  resource_service.h  resource_service_impl.cpp  resource_service_impl.h
app/platform/service/: CMakeLists.txt  service.h  service_locator.h
app/platform/task/: CMakeLists.txt  runnable_task.cpp  runnable_task.h  task.h  task_service.h  task_service_impl.cpp  task_service_impl.h
app/platform/theme/: CMakeLists.txt  theme.h  themeservice-impl.cpp  themeservice-impl.h  themeservice.cpp  themeservice.h
app/platform/undo/: CMakeLists.txt  undo_command.h  undo_stack.h
app/renderer/: CMakeLists.txt
app/renderer/audio_renderer/: CMakeLists.txt  command_buffer.cpp  command_buffer.h  decoder_manager.cpp  decoder_manager.h  render_command.h  render_context.cpp  render_context.h  render_io.cpp  render_io.h  render_state.cpp  render_state.h  renderer.cpp  renderer.h  ring_buffer.h  sequence_renderer.cpp  sequence_renderer.h  test_renderer.h
app/renderer/video_renderer/: CMakeLists.txt  command_buffer.cpp  command_buffer.h  decoder_manager.cpp  decoder_manager.h  render_command.h  render_sharing_context.cpp  render_sharing_context.h  render_sync.cpp  render_sync.h  render_thread.cpp  render_thread.h  renderer.cpp  renderer.h  renderer_context.cpp  renderer_context.h  renderer_view.cpp  renderer_view.h  sequence_renderer.cpp  sequence_renderer.h  shader_program.h  simple_render_command.h  surface_provider.h  video_clip_render_command.h  video_render_command.h
test/: CMakeLists.txt  main.cpp  serialize.cpp  storage_item.cpp
test/encoder/: encoder_test.cpp
test/platform/: context_key.cpp
test/serialize/: effect.cpp  resource.cpp  sequence.cpp  storage_item.cpp
(+169 files in other folders)
