add_subdirectory(shader)
add_subdirectory(command)

set(NLIVE_SOURCES
  ${NLIVE_SOURCES}
  renderer/video_renderer/shader_program.h
  renderer/video_renderer/renderer.h
  renderer/video_renderer/renderer.cpp
  renderer/video_renderer/render_sharing_context.h
  renderer/video_renderer/render_sharing_context.cpp
  renderer/video_renderer/decoder_manager.h
  renderer/video_renderer/decoder_manager.cpp
  renderer/video_renderer/renderer_context.h
  renderer/video_renderer/renderer_context.cpp
  renderer/video_renderer/render_command.h
  renderer/video_renderer/simple_render_command.h
  renderer/video_renderer/video_clip_render_command.h
  renderer/video_renderer/video_render_command.h
  renderer/video_renderer/command_buffer.h
  renderer/video_renderer/command_buffer.cpp
  renderer/video_renderer/renderer_view.h
  renderer/video_renderer/renderer_view.cpp
  renderer/video_renderer/sequence_renderer.h
  renderer/video_renderer/sequence_renderer.cpp
  PARENT_SCOPE
)